CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

PROJECT(InvGrid)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

SET(SOURCE_FILES
	main.cpp
	FileUtil.cpp
	NBTTag.cpp
	Types.cpp
	Item.cpp
	MainWindow.cpp
	EditWidget.cpp
)

SET(MOC_SOURCE_FILES
	MainWindow.h
	EditWidget.h
)

if(APPLE)
	SET(CMAKE_EXE_LINKER_FLAGS "-framework Foundation")
	SET(PLATFORM_SOURCE_FILES FilePathCocoa.mm)
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	SET(PLATFORM_SOURCE_FILES FilePathLinux.cpp)
endif()

QT4_WRAP_CPP(SOURCE_FILES ${MOC_SOURCE_FILES})

ADD_EXECUTABLE(InvGrid ${SOURCE_FILES} ${PLATFORM_SOURCE_FILES})
TARGET_LINK_LIBRARIES(InvGrid ${QT_LIBRARIES})
TARGET_LINK_LIBRARIES(InvGrid z)

