CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

PROJECT(InvGrid)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

SET(SOURCE_FILES
	main.cpp
	FileUtil.cpp
	NBTTag.cpp
	Types.cpp
	Item.cpp
	MainWindow.cpp
	EditWidget.cpp
)

SET(MOC_SOURCE_FILES
	MainWindow.h
	EditWidget.h
)

if(APPLE)
	SET(CMAKE_EXE_LINKER_FLAGS "-framework Foundation")
	SET(PLATFORM_SOURCE_FILES FilePathCocoa.mm)
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	SET(PLATFORM_SOURCE_FILES FilePathLinux.cpp)
endif()

QT4_WRAP_CPP(SOURCE_FILES ${MOC_SOURCE_FILES})

ADD_EXECUTABLE(InvGrid ${SOURCE_FILES} ${PLATFORM_SOURCE_FILES})
TARGET_LINK_LIBRARIES(InvGrid ${QT_LIBRARIES})
TARGET_LINK_LIBRARIES(InvGrid z)
INSTALL(PROGRAMS InvGrid DESTINATION bin)
INSTALL(FILES invgrid.desktop DESTINATION share/applications)
INSTALL(FILES invgrid.png DESTINATION share/pixmaps)

SET(CPACK_GENERATOR DEB)
SET(CPACK_PACKAGE_NAME InvGrid)
SET(CPACK_PACKAGE_VERSION 0.6.1)
SET(CPACK_PACKAGE_CONTACT "James Bendig <jbendig@starbytesoftware.com>")

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "InvGrid is a simple inventory editor for Minecraft.")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libqtgui4 (>= 4.7.0-0),zlib1g (>=1.0.4)")
SET(CPACK_DEBIAN_PACKAGE_SECTION Utilities)
if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")
	SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE i386)
else()
	SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE amd64)
endif()
INCLUDE(CPack)
